--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^6.3.3",
     "cssnano": "^3.5.2",
     "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1",
     "gulp-postcss": "^6.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-watch": "^4.3.5"
